# pProp_MLP

./: .gitignore  CLAUDE.md  README.md  launch_sweep.sh  launch_sweep_regression.sh  pyproject.toml
src/: data_utils.py  featurize_minimol.py  losses.py  make_splits.py  metrics.py  model.py  sweep_train.py  sweep_train_regression.py
sweeps/: sweep.yaml  sweep_regression.yaml
